# ecommerce-rust-api-sql

./: .env  .env.example  Cargo.toml  Read.MD  tables.MD
src/: main.rs
src/config/: database.rs
src/controllers/user/: mod.rs
src/controllers/user/auth/: mod.rs
src/controllers/user/auth/details/: details.rs  mod.rs  rType.rs
src/controllers/user/auth/login/: login.rs
src/controllers/user/auth/registration/: rType.rs  registration.rs
src/controllers/user/login/: login.rs  rType.rs
src/controllers/user/product/: mod.rs
src/controllers/user/product/add_product/: add_product.rs  mod.rs  rType.rs
src/controllers/user/product/get_product/: get_product.rs  mod.rs  rType.rs
src/controllers/user/product/products_list/: mod.rs  products_list.rs  rType.rs
src/controllers/user/product/update_product/: mod.rs  rType.rs  update_product.rs
src/controllers/user/registration/: rType.rs  registration.rs
src/middleware/: authentication.rs  mod.rs  rType.rs
src/routes/v1/: index.rs
src/routes/v1/user/: auth.rs  mod.rs  product.rs
src/services/: imageUpload.rs  mail.rs  mod.rs  response.rs
