[package]
name = "routes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.10.0"
uuid = { version = "1.2.2", features = ["v4"] }
log = "0.4"
dotenv = "0.15.0"
sqlx = { version = "0.5", features = ["runtime-async-std-native-tls", "postgres", "uuid", "bigdecimal", "time"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.113"
jsonwebtoken = "9.3.0" # ------------ Create authentication token
pwhash = "1.0.0"
bcrypt = "0.15.1"
lettre = "0.11.7"
bigdecimal = { version = "0.2.0", features = ["serde"] }
actix-multipart = "0.6.1"
futures = "0.3.30"
base64 = "0.22.1"
